jboard.less
.boxShadow(@radius){
  -webkit-border-radius: @radius !important;
  -moz-border-radius: @radius !important;
  -ms-border-radius: @radius !important;
  -o-border-radius: @radius !important;
  border-radius: @radius !important;
}


body {
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
  padding-top: 20px;
  padding-bottom: 20px;
  background: #f2f3f6;
}

textarea {
  resize: none;
}

a {
  color: #333;

  &:hover {
    color: #555;
    text-decoration: none;
  }
}

ul {
  padding-left: 0;
}

li {
  list-style-type: none;
}

label {
  padding: 0 10px 0;
}

.site-link {
  color: #337ab7;

  &:hover {
    color: #23527c;
    text-decoration: underline;
  }
}

.alert {
  padding: 10px;
  margin: 5px 0;
}

.alert-info {
  color: #333;
}

.status-notification {
  display: none;
}

.create-posting-form {
  margin: 35px 0;
  .form-control {
    padding: 6px 8px;
  }
}

.list-group-item {
  border: none;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  padding: 10px 0px;

  &:first-child, &:last-child {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }
}

.panel-body {
  h5 {
    text-decoration: underline;
  }

  mark {
    font-style: italic;
  }
}

/* Custom page header */
.header {
  padding: 0 15px 20px;
  border-bottom: 1px solid #e5e5e5;

  /* Make the masthead heading the same height as the navigation */
  h3{
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 20px 15px 0;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Supporting marketing content */
.marketing {
  padding-right: 15px;
  padding-left: 15px;
  margin: 40px 0;

  p + h4 {
    margin-top: 28px;
  }
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;

  .btn {
    padding: 14px 24px;
    font-size: 21px;
  }
}

.postBreadCrumb{
  li{
  margin-bottom: 3px;
  border: 1px solid #e1e1e1;
  padding: 5px 20px;
  .boxShadow(3px);
    i{
      margin-right: 3px;
    }
  }
}

h2.title{
  border-top: 1px solid #e1e1e1;
 padding-top: 40px;
 margin-top: 30px;
 padding-bottom: 20px;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 970px;
  }
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-right: 0;
    padding-left: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

